add html elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Blackjack</title>
 </head>
 <body>
-    
+    <div class="table" id="table">
+        <div class="table-top" id="dealer-area">
+            <h2 id="cards"></h2>
+            <h3 class="hand-value" id="dealer-hand-value">number</h3>
+        </div>
+        <div class="table-top" id="player-area">
+            <h2 id="cards"></h2>
+            <h3 class="hand-value" id="player-hand-value">number</h3>
+            </div>
+    </div>
+    <button class="playerBtn" id="hit-button">Hit</button>
+    <button class="playerBtn" id="deal-button">Deal</button>
+    <button class="playerBtn" id="stay-button">Stay</button>
 </body>
 </html>
