--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="table" id="table">
         <div class="table-top" id="dealer-area">
-            <h2 id="cards"></h2>
+            <h2 id="dealer-cards"></h2>
             <h3 class="hand-value" id="dealer-hand-value">number</h3>
         </div>
         <div class="table-top" id="player-area">
-            <h2 id="cards"></h2>
+            <h2 id="player-cards"></h2>
             <h3 class="hand-value" id="player-hand-value">number</h3>
             </div>
     </div>
