add cache elements to test display messages in browser

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Blackjack</title>
 </head>
 <body>
+    <h1 id="test">card count</h1>
     <div class="table" id="table">
         <div class="table-top" id="dealer-area">
             <h2 id="dealer-cards"></h2>
