add status bar in html and connect in JS

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
     <button class="playerBtn" id="hit-button">Hit</button>
     <button class="playerBtn" id="deal-button">Deal</button>
     <button class="playerBtn" id="stay-button">Stay</button>
+    <div id="status-bar">
+        <h5 id="result-message"></h5>
+    </div>
 </body>
 </html>
