create function to check for blackjack

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>Blackjack</title>
 </head>
 <body>
-    <h1 id="test">card count</h1>
+    <h1 id="title">Blackjack</h1>
     <div class="table" id="table">
         <div class="table-top" id="dealer-area">
-            <h2 id="dealer-cards"></h2>
-            <h3 class="hand-value" id="dealer-hand-value">number</h3>
+            <h3 id="dealer-cards"></h3>
+            <h3 class="hand-value" id="dealer-hand-value"></h3>
         </div>
         <div class="table-top" id="player-area">
-            <h2 id="player-cards"></h2>
-            <h3 class="hand-value" id="player-hand-value">number</h3>
+            <h3 id="player-cards"></h3>
+            <h3 class="hand-value" id="player-hand-value"></h3>
             </div>
     </div>
     <button class="playerBtn" id="hit-button">Hit</button>
     <button class="playerBtn" id="deal-button">Deal</button>
     <button class="playerBtn" id="stay-button">Stay</button>
     <div id="status-bar">
-        <h5 id="result-message"></h5>
+        <h5 id="result-message">message</h5>
     </div>
 </body>
 </html>
