add input and button for bet in html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <button class="playerBtn" id="hit-button">Hit</button>
     <button class="playerBtn" id="deal-button">Deal</button>
     <button class="playerBtn" id="stay-button">Stay</button>
+    <input type="text" id="bet-input" class="betInput" placeholder="$">
+    <button id="bet-button" class="playerBtn">Bet</button>
     <div id="status-bar">
         <h5 id="result-message">message</h5>
     </div>
