--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./js/app.js"></script>
     <title>Blackjack</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1 id="title">Blackjack</h1>
     <div class="table" id="table">
         <div class="table-top" id="dealer-area">
-            <h3 id="dealer-cards"></h3>
-            <h3 class="hand-value" id="dealer-hand-value"></h3>
+            <h3 id="dealer-cards">dealer cards</h3>
+            <h3 class="hand-value" id="dealer-hand-value">dealer hand value</h3>
         </div>
         <div class="table-top" id="player-area">
-            <h3 id="player-cards"></h3>
-            <h3 class="hand-value" id="player-hand-value"></h3>
+            <h3 id="player-cards">player cards</h3>
+            <h3 class="hand-value" id="player-hand-value">player hand value</h3>
             </div>
     </div>
     <button class="playerBtn" id="hit-button">Hit</button>
