--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
             <h3 id="dealer-cards">dealer cards</h3>
             <h3 class="hand-value" id="dealer-hand-value">dealer hand value</h3>
         </div>
+        <div class="table-top" id="blackjack-rules">
+            <h3>Blackjack pays 3 to 2</h2>
+        </div>
         <div class="table-top" id="player-area">
             <h3 id="player-cards">player cards</h3>
             <h3 class="hand-value" id="player-hand-value">player hand value</h3>
             </div>
-    </div>
-    <button class="playerBtn" id="hit-button">Hit</button>
-    <button class="playerBtn" id="deal-button">Deal</button>
-    <button class="playerBtn" id="stay-button">Stay</button>
-    <input type="text" id="bet-input" class="betInput" placeholder="$">
-    <button id="bet-button" class="playerBtn">Bet</button>
-    <div id="status-bar">
-        <h5 id="result-message">message</h5>
-    </div>
+            <div class="player-options" id="player-options">
+                <button class="playerBtn" id="deal-button">Deal</button>
+                <button class="playerBtn" id="hit-button">Hit</button>
+                <button class="playerBtn" id="stay-button">Stay</button>
+                <input type="text" id="bet-input" class="betInput" placeholder="$">
+                <button id="bet-button" class="playerBtn">Bet</button>
+            </div>
+        </div>
+        <div class="status-bar id="status-bar">
+            <h5 id="result-message">message</h5>
+        </div>
 </body>
 </html>
