--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             <h3 class="hand-value" id="dealer-hand-value">dealer hand value</h3>
         </div>
         <div class="table-top" id="blackjack-rules">
+            <h5><i>Dealer stands at 17</i></h5>
             <h3>Blackjack pays 3 to 2</h2>
         </div>
         <div class="table-top" id="player-area">
+            <h3 class="bet-value" id="bet-value">$50</h3>
             <h3 id="player-cards">player cards</h3>
             <h3 class="hand-value" id="player-hand-value">player hand value</h3>
             </div>
