link css cards to html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="./js/app.js"></script>
+    <script defer src="../js/app.js"></script>
     <title>Blackjack</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/cardstarter.css">
 </head>
 <body>
     <h1 id="title">Blackjack</h1>
@@ -19,6 +20,7 @@
             <h3>Blackjack pays 3 to 2</h2>
         </div>
         <div class="table-top" id="player-area">
+            <div class="card dA"></div>
             <h3 id="player-cards">player cards</h3>
             <h3 class="hand-value" id="player-hand-value">player hand value</h3>
         </div>
