--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
 <body>
     <h1 id="title">Blackjack</h1>
     <div class="table" id="table">
-        <div class="table-top" id="dealer-area">
-            <h3 id="dealer-cards">dealer cards</h3>
-            <h3 class="hand-value" id="dealer-hand-value">dealer hand value</h3>
+        <div class="dealer-area">
+            <h3 id="dealer-cards"></h3>
+            <div class="card-space">
+                <div class="card joker"></div>
+                <div class="card joker"></div>
+            </div>
+            <h3 class="hand-value" id="dealer-hand-value">21</h3>
         </div>
-        <div class="table-top" id="blackjack-rules">
+        <div class="table-center">
             <h5><i>Dealer stands at 17</i></h5>
             <h3>Blackjack pays 3 to 2</h2>
         </div>
-        <div class="table-top" id="player-area">
-            <div class="card dA"></div>
-            <h3 id="player-cards">player cards</h3>
-            <h3 class="hand-value" id="player-hand-value">player hand value</h3>
+        <div class="player-area">
+            <h3 id="player-cards"></h3>
+            <h3 class="hand-value" id="player-hand-value">21</h3>
+            <div class="card-space">
+                <div class="card joker"></div>
+                <div class="card joker"></div>
+            </div>
         </div>
     </div>
     <div class="status-bar">
