--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
 </head>
 <body>
     <h1 id="title">Blackjack</h1>
-    <div class="table" id="table">
+    <div class="table first"></div>
+    <div class="table second" id="table">
         <div class="dealer-area">
-            <h3 id="dealer-cards"></h3>
+            <h3 id="dealer-cards">dealer cards</h3>
             <div class="card-space">
-                <div class="card joker"></div>
-                <div class="card joker"></div>
             </div>
         </div>
-        <h3 class="hand-value" id="dealer-hand-value">21</h3>
-        <div class="table-center">
+        <h3 class="hand-value" id="dealer-hand-value">dealer value: 21</h3>
+        <!-- <div class="table-center">
             <h5><i>Dealer stands at 17</i></h5>
             <h3>Blackjack pays 3 to 2</h2>
-        </div>
-        <h3 class="hand-value" id="player-hand-value">21</h3>
+        </div> -->
+        <h3 class="hand-value" id="player-hand-value">player value: 21</h3>
         <div class="player-area">
-            <h3 id="player-cards"></h3>
+            <h3 id="player-cards">player cards</h3>
             <div class="card-space">
-                <div class="card joker"></div>
-                <div class="card joker"></div>
             </div>
         </div>
     </div>
-    <div class="status-bar">
-        <p class="status" id="game-status">message</p>
+    <div class="status-bar second">
+        <!-- <p class="status" id="game-status">message</p> -->
         <div class="money-tracker">
             <p class="status" id="current-bet">Current bet: $50</p>
             <p class="status" id="purse-value">Purse: $500</p>
@@ -41,11 +38,13 @@
     </div>
     <div class="action-area">
         <div class="player-options" id="player-options">
-            <button class="playerBtn" id="deal-button">Deal</button>
-            <button class="playerBtn" id="hit-button">Hit</button>
-            <button class="playerBtn" id="stay-button">Stay</button>
-            <input type="text" id="bet-input" class="betInput" placeholder="$">
-            <button class="playerBtn" id="bet-button">Bet</button>
+
+            <button class="playerBtn" id="sit-down-button">Sit Down</button>
+            <button class="playerBtn second" id="deal-button">Deal</button>
+            <button class="playerBtn third" id="hit-button">Hit</button>
+            <button class="playerBtn third" id="stay-button">Stay</button>
+            <input type="text" id="bet-input" class="betInput second" placeholder="$">
+            <button class="playerBtn second" id="bet-button">Bet</button>
         </div>
     </div>
 </body>
