function to take bet

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="status-bar second">
-        <!-- <p class="status" id="game-status">message</p> -->
+        <p class="status" id="game-status">message</p>
         <div class="money-tracker">
             <p class="status" id="current-bet">Current bet: $50</p>
             <p class="status" id="purse-value">Purse: $500</p>
