adjust dealerturn function

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
             <button class="playerBtn second" id="bet-button">Bet</button>
         </div>
     </div>
+    <p id="test-message">message</p>
 </body>
 </html>
