--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="action-area">
         <div class="player-options" id="player-options">
 
-            <button class="playerBtn" id="sit-down-button">Sit Down</button>
+            <!-- <button class="playerBtn" id="sit-down-button">Sit Down</button> -->
             <button class="playerBtn second" id="deal-button">Deal</button>
             <button class="playerBtn third" id="hit-button">Hit</button>
             <button class="playerBtn third" id="stay-button">Stay</button>
