adjust handvalue functions to handle Ace case, and remove console logs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="table second" id="table">
         <div class="dealer-area">
             <h3 id="dealer-cards">dealer cards</h3>
-            <div class="card-space">
+            <div class="dealer-card-space">
             </div>
         </div>
         <h3 class="hand-value" id="dealer-hand-value">dealer value: 21</h3>
@@ -25,7 +25,7 @@
         <h3 class="hand-value" id="player-hand-value">player value: 21</h3>
         <div class="player-area">
             <h3 id="player-cards">player cards</h3>
-            <div class="card-space">
+            <div class="player-card-space">
             </div>
         </div>
     </div>
