create function to take bets and display in browser

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </div>
     <div class="status-bar second">
         <p class="status" id="game-status">message</p>
-        <!-- <div class="money-tracker">
+        <div class="money-tracker">
             <p class="status" id="current-bet">Current bet: $50</p>
             <p class="status" id="purse-value">Purse: $500</p>
-        </div> -->
+        </div>
     </div>
     <div class="action-area">
         <div class="player-options" id="player-options">
@@ -42,8 +42,8 @@
             <button class="playerBtn second" id="deal-button">Deal</button>
             <button class="playerBtn third" id="hit-button">Hit</button>
             <button class="playerBtn third" id="stay-button">Stay</button>
-            <!-- <input type="text" id="bet-input" class="betInput second" placeholder="$"> -->
-            <!-- <button class="playerBtn second" id="bet-button">Bet</button> -->
+            <input type="text" id="bet-input" class="betInput second" placeholder="$">
+            <button class="playerBtn second" id="bet-button">Bet</button>
         </div>
     </div>
 </body>
