--- a/index.html
+++ b/index.html
@@ -13,26 +13,31 @@
     <div class="table first"></div>
     <div class="table second" id="table">
         <div class="dealer-area">
-            <h3 id="dealer-cards">dealer cards</h3>
+            <h3 id="dealer-cards">Dealer</h3>
             <div class="dealer-card-space">
+                <card class="card joker"></card>
+                <card class="card joker"></card>
             </div>
         </div>
-        <h3 class="hand-value" id="dealer-hand-value">dealer value: 21</h3>
+        <h3 class="hand-value" id="dealer-hand-value"></h3>
         <!-- <div class="table-center">
             <h5><i>Dealer stands at 17</i></h5>
             <h3>Blackjack pays 3 to 2</h2>
         </div> -->
-        <h3 class="hand-value" id="player-hand-value">player value: 21</h3>
+        <h3 class="hand-value" id="player-hand-value"></h3>
         <div class="player-area">
-            <h3 id="player-cards">player cards</h3>
+            <h3 id="player-cards">You</h3>
             <div class="player-card-space">
+                <card class="card joker"></card>
+                <card class="card joker"></card>
+                
             </div>
         </div>
     </div>
     <div class="status-bar second">
         <p class="status" id="game-status">message</p>
         <div class="money-tracker">
-            <p class="status" id="current-bet">Current bet: $50</p>
+            <p class="status" id="current-bet">Current bet: $0</p>
             <p class="status" id="purse-value">Purse: $500</p>
         </div>
     </div>
