display css cards in browser

--- a/index.html
+++ b/index.html
@@ -14,23 +14,18 @@
     <div class="table second" id="table">
         <div class="dealer-area">
             <h3 id="dealer-cards">Dealer</h3>
-            <div class="dealer-card-space">
-                <card class="card joker"></card>
-                <card class="card joker"></card>
+            <div id="dealer-card-space">
             </div>
         </div>
         <h3 class="hand-value" id="dealer-hand-value"></h3>
-        <!-- <div class="table-center">
+        <div class="table-center">
             <h5><i>Dealer stands at 17</i></h5>
             <h3>Blackjack pays 3 to 2</h2>
-        </div> -->
+        </div>
         <h3 class="hand-value" id="player-hand-value"></h3>
         <div class="player-area">
             <h3 id="player-cards">You</h3>
-            <div class="player-card-space">
-                <card class="card joker"></card>
-                <card class="card joker"></card>
-                
+            <div id="player-card-space">             
             </div>
         </div>
     </div>
