adjust blackjack to payout 1.5

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         </div>
         <h3 class="hand-value" id="player-hand-value"></h3>
         <div class="player-area">
+            <div id="player-card-space"></div>
             <h3 id="player-cards">You</h3>
-            <div id="player-card-space">             
-            </div>
         </div>
     </div>
     <div class="status-bar second">
