--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- status bar -->
     <div class="status-bar second">
-        <p class="status" id="game-status"></p>
+        <p class="status" id="game-status">Care to gamble? Set a bet. Deal a hand.</p>
     </div>
     
     <!-- buttons & inputs  -->
