add reset functionality and fix color contrast issues with buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
+    <header>
+        <button id="reset">⟳</button>
+    </header>
     <!-- header -->
     <h1 id="title">Blackjack</h1>
     
